--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
       <h2>Contato</h2>
       <p>Email: 0001066690@senaimgaluno.com.br</p>
-      <p>GitHub: <a href="https://github.com/seuusuario" target="_blank">github.com/seuusuario</a></p>
+      <p>GitHub: <a href="https://github.com/Iran3004" target="_blank">github.com/Iran3004</a></p>
     </div>
   </section>
 
